--- a/construtech/pubspec.yaml
+++ b/construtech/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.2.8+4
   path_provider: ^2.1.0
   intl: ^0.18.1
+  mailer: ^6.0.1
 
 dev_dependencies:
   flutter_test:
